--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,12 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="home-background-image">
+  <%= image_tag "india", alt: "mac", class: 'home-image' %>
+  <h2>Junior full-stack developer.</h2>
+</div>
+
+<div class="content">
+
+  <div id="about-section">
+    <h3 class="section-title">About</h3>
+
+  </div>
+</div>
