--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,6 +7,6 @@
 
   <div id="about-section">
     <h3 class="section-title">About</h3>
-
+    <h5 class="quote">Junior full-stack developer, Ruby on Rails focused.</h5>
   </div>
 </div>
