--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,7 +22,7 @@ body {
 h2 {
   position: absolute;
   top: 150px;
-  left: 400px;
+  left: 300px;
   color: white;
   font-size: 46px;
 }
@@ -31,13 +31,9 @@ h2 {
   padding: 0 40px;
   height: 15vh;
   line-height: 15vh;
-  background-color: #008073;
+  background-color: $green;
   color: white;
   font-size: 50px;
   text-transform: uppercase;
   margin: 0;
-}
-
-#about-section {
-  height: 100vh;
 }
