--- a/app/assets/stylesheets/sections/_about.scss
+++ b/app/assets/stylesheets/sections/_about.scss
@@ -3,7 +3,29 @@
 }
 
 .quote {
-  padding: 20px 40px;
-  margin: 50px 0 0 20px;
+  padding: 16px 24px;
+  margin: 50px 0 0 40px;
+  font-size: 34px;
   border-left: 3px solid $green;
+}
+
+.paragraph-description {
+  margin: 0 80px 0 40px;
+  padding: 16px 24px 16px 24px;
+  text-align: justify;
+  line-height: 60px;
+  font-size: 18px;
+}
+
+.green {
+  color: $green;
+}
+
+.focus {
+  background-color: $green;
+  color: white;
+  margin-top: 20px;
+  padding: 8px 6px;
+  width: 180px;
+  text-align: center;
 }
