--- a/app/assets/stylesheets/sections/_experience.scss
+++ b/app/assets/stylesheets/sections/_experience.scss
@@ -7,6 +7,9 @@
   box-shadow: 7px 4px 8px -9px #000000;
   margin: 50px auto 20px auto;
   text-align: center;
+  &:hover {
+    box-shadow: 8px 5px 9px -9px #000000;
+  }
 }
 
 .company-infos {
