--- a/app/assets/stylesheets/sections/_project.scss
+++ b/app/assets/stylesheets/sections/_project.scss
@@ -6,8 +6,11 @@
 }
 
 .project-card {
-  width: 32vw;
+  width: 34vw;
   background-color: white;
   box-shadow: 7px 4px 8px -9px #000000;
-  margin: 40px 60px 0 60px;
+  margin: 40px 40px 0 40px;
+  &:hover {
+    box-shadow: 8px 5px 9px -9px #000000;
+  }
 }
