--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,99 +1,13 @@
 <div class="home-background-image">
-  <%= image_tag "india", alt: "mac", class: 'home-image' %>
+  <%= image_tag "wagon-anne", alt: "mac", class: 'home-image' %>
   <h2>Junior full-stack developer.</h2>
 </div>
 
 <div class="content">
 
-  <div id="about-section">
-    <h3 class="section-title">About</h3>
-    <h5 class="quote">Junior full-stack developer, Ruby on Rails focused.</h5>
-    <p class="paragraph-description">As part of a career change, I recently decided to dive into coding by following an intensive and captivating bootcamp to learn full-stack development, focusing on <span class="green">Ruby on Rails, HTML, CSS, SASS, Bootstrap, JavaScript, jQuery, relational DB design and SQL queries, Sinatra, git, GitHub, and hosting on Heroku</span> and I now found a field that passionates me! <br>
-      I am now looking for a full-stack or back-end developer role with a focus on Ruby on Rails. <br>
-      Graduated from EDHEC business school in 2018 with a double diploma in Business Management, I have previously worked in consulting, mostly in the retail industry. More recently, I worked in a software company as a customer success manager. </p>
-    <h5 class="focus">Available</h5>
-  </div>
-
-  <div id="experience-section">
-    <h3 class="section-title">Experience</h3>
-
-    <div class="experience-card">
-      <div class="company-infos d-flex justify-content-between align-items-center">
-        <h5 class="job-title">Full-stack coding student</h5>
-        <h5 class="company">Le Wagon</h5>
-      </div>
-      <div class="job-infos">
-        <p class="job-description">9-week intensive coding bootcamp learning HTML, CSS, SASS, Bootstrap, JavaScript, jQuery, relational DB design and SQL queries, git, GitHub, Heroku and Ruby on Rails. Core concepts of object-oriented programming (OOP). Software structuring following design patterns like MVC. Designed, implemented and shipped to production a clone of AirBnB and a Rails prototype of grocery shopping website, telling customers where to shop to have the lowest impact on the planet and giving product recommandations for more seasonal and greener products.</p>
-        <p class="job-date">Jan 20 - March 20 | London</p>
-      </div>
-    </div>
-
-    <div class="experience-card">
-      <div class="company-infos d-flex justify-content-between align-items-center">
-        <h5 class="job-title">Customer Success Manager</h5>
-        <h5 class="company">CleanCloud</h5>
-      </div>
-      <div class="job-infos">
-        <p class="job-description">Cloud-based SaaS solution with 5,000 clients in 70 countries. Leading POS for dry-cleaning businesses. Onboarding of new customers and ongoing training, account management and support of existing customers. Handling of escalated Zendesk tickets and managing the support team.</p>
-        <p class="job-date">Jul 19 - Dec 19 | London</p>
-      </div>
-    </div>
-
-    <div class="experience-card">
-      <div class="company-infos d-flex justify-content-between align-items-center">
-        <h5 class="job-title">Digital & Retail Consultant</h5>
-        <h5 class="company">B.D.C. Digital Retail Consulting</h5>
-      </div>
-      <div class="job-infos">
-        <p class="job-description"><em>Consulting role:</em>
-          • Supported innovative start-ups in their business development in the UK or France and retailers in their international development, digital transformation, or e-commerce strategies
-          • Organised and led ‘Learning Expeditions’ in the UK to help retailers and entrepreneurs discovering the latest digital commerce innovations by visiting concept stores and meeting with leading retail actors
-          • Monitored market trends, competitor analysis and remained up to date with digital and retail trends
-          <br><br>
-          <em>Sales and marketing role:</em>
-          • Led and monitored B.D.C. UK presence on social media and its website and developed the UK sales strategy.
-          • Wrote articles for the retail blog and bi-monthly newsletters</p>
-        <p class="job-date">Jun 18 - March 19 | London</p>
-      </div>
-    </div>
-
-    <div class="experience-card">
-      <div class="company-infos d-flex justify-content-between align-items-center">
-        <h5 class="job-title">Tech Recruiter</h5>
-        <h5 class="company">Orcan Intelligence</h5>
-      </div>
-      <div class="job-infos">
-        <p class="job-description">Sourced Business Intelligence and Analytics contractors specialists across Europe, mostly for banks and telecoms.
-          Screened CVs, contacted and evaluated candidates.
-          Understanding of the BI field and recruitment of the best contractors in BI (back-end developers, architects, data modelers, with salaries varying from £500 - £1,500 a day).</p>
-        <p class="job-date">Apr 17 - July 17 | London</p>
-      </div>
-    </div>
-  </div>
-
-  <h3 class="section-title">Projects</h3>
-  <div id="project-section">
-    <div class="project-card">
-      <h5 class="quote">emitless</h5>
-    </div>
-
-    <div class="project-card">
-      <h5 class="quote">emitless</h5>
-    </div>
-  </div>
-
-  <h3 class="section-title">Skills</h3>
-  <div id="skills-section">
-    <div class="project-card">
-      <h5 class="quote">Languages</h5>
-      <p>French | Fluent</p>
-      <p>English | Fluent</p>
-    </div>
-    <div class="project-card">
-      <h5 class="quote">Development</h5>
-      <p></p>
-      <p></p>
-    </div>
-  </div>
+  <%= render 'sections/about' %>
+  <%= render 'sections/experience' %>
+  <%= render 'sections/project' %>
+  <%= render 'sections/skills' %>
 
 </div>
