--- a/app/assets/stylesheets/pages/_navbar.scss
+++ b/app/assets/stylesheets/pages/_navbar.scss
@@ -18,6 +18,7 @@
   }
   > p {
     padding-top: 24px;
+    color: #244051;
   }
 }
 
@@ -25,7 +26,12 @@
   list-style: none;
   padding: 32px;
   margin-top: 16px;
-  > li {
-    padding: 8px 0;
+}
+
+.menu-navbar li {
+  padding: 8px 0;
+  color: #244051;
+  &:hover {
+    font-weight: bold;
   }
 }
